{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 90,
  "lineage": "ddfd11b2-4d42-8522-bcc9-a55e4a394694",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:security-group/sg-0c6fcc90609babe57",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c6fcc90609babe57",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-nebulance-additional2025072419131388060000000c",
            "name_prefix": "eks-nebulance-additional",
            "owner_id": "940482433884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-additional"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-additional",
              "Project": "DevOps-Bootcamp-EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:security-group/sg-06d800af9eb12a7cf",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06d800af9eb12a7cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fd1fcf67f622edf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-nebulance-cluster-2025072419131379070000000a",
            "name_prefix": "eks-nebulance-cluster-",
            "owner_id": "940482433884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-cluster"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-cluster",
              "Project": "DevOps-Bootcamp-EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:security-group/sg-07fd1fcf67f622edf",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fd1fcf67f622edf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d800af9eb12a7cf"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-nebulance-node-20250724191313789700000009",
            "name_prefix": "eks-nebulance-node-",
            "owner_id": "940482433884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-node",
              "kubernetes.io/cluster/eks-nebulance": "owned"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-node",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4082634856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d800af9eb12a7cf",
            "security_group_rule_id": "sgr-0171a73b668576ed1",
            "self": false,
            "source_security_group_id": "sg-07fd1fcf67f622edf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-156458386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-097bc01a55e4588ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3117757564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-0e52492bfcd634fc6",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-477719490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-0724390153ab3ddfd",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3577416788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-026152368d547c3f5",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3328651381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-05815244e9d9937e5",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2730886078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-00b2e03fc0f3a8771",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-646829747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-07446cc06d0a6b818",
            "self": false,
            "source_security_group_id": "sg-06d800af9eb12a7cf",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1485262885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-0b1acf18c371f5754",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-140320253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-09834a1d203012508",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2885860882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07fd1fcf67f622edf",
            "security_group_rule_id": "sgr-0f4e9aba8c6f900ae",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:network-acl/acl-05f10d711006684e4",
            "default_network_acl_id": "acl-05f10d711006684e4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05f10d711006684e4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "940482433884",
            "subnet_ids": [
              "subnet-001cb81e9f92c8c4c",
              "subnet-029d6d29ef65a6af8",
              "subnet-05cfc2b92fd8ba114",
              "subnet-086c9f90e17915dea",
              "subnet-0bf01d792d2341c2e",
              "subnet-0c6b367ae543b37fd"
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:route-table/rtb-00b94bed039875757",
            "default_route_table_id": "rtb-00b94bed039875757",
            "id": "rtb-00b94bed039875757",
            "owner_id": "940482433884",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:security-group/sg-068b2be254e67afba",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-068b2be254e67afba",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "940482433884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nebulance-vpc-default",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-default",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a862392147a3558a",
            "arn": "arn:aws:ec2:eu-central-1:940482433884:elastic-ip/eipalloc-0a862392147a3558a",
            "association_id": "eipassoc-06cde95c74d0e3f43",
            "domain": "vpc",
            "id": "eipalloc-0a862392147a3558a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-00431058b1b18590b",
            "private_dns": "ip-10-0-4-187.eu-central-1.compute.internal",
            "private_ip": "10.0.4.187",
            "public_dns": "ec2-52-58-237-154.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.237.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b015189aa3d3825e",
            "arn": "arn:aws:ec2:eu-central-1:940482433884:elastic-ip/eipalloc-0b015189aa3d3825e",
            "association_id": "eipassoc-02e82aa3010289895",
            "domain": "vpc",
            "id": "eipalloc-0b015189aa3d3825e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c2e74900a1ba223f",
            "private_dns": "ip-10-0-5-234.eu-central-1.compute.internal",
            "private_ip": "10.0.5.234",
            "public_dns": "ec2-35-159-255-76.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.159.255.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd752b89f9995e66",
            "arn": "arn:aws:ec2:eu-central-1:940482433884:elastic-ip/eipalloc-0bd752b89f9995e66",
            "association_id": "eipassoc-0344fb0c04d4bee09",
            "domain": "vpc",
            "id": "eipalloc-0bd752b89f9995e66",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09102f74e333b57dc",
            "private_dns": "ip-10-0-6-210.eu-central-1.compute.internal",
            "private_ip": "10.0.6.210",
            "public_dns": "ec2-63-179-34-26.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.179.34.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:internet-gateway/igw-003b6dddcb92b5e72",
            "id": "igw-003b6dddcb92b5e72",
            "owner_id": "940482433884",
            "tags": {
              "Name": "eks-nebulance-vpc",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a862392147a3558a",
            "association_id": "eipassoc-06cde95c74d0e3f43",
            "connectivity_type": "public",
            "id": "nat-01071c86dd9300222",
            "network_interface_id": "eni-00431058b1b18590b",
            "private_ip": "10.0.4.187",
            "public_ip": "52.58.237.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bf01d792d2341c2e",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b015189aa3d3825e",
            "association_id": "eipassoc-02e82aa3010289895",
            "connectivity_type": "public",
            "id": "nat-052b43016bb10c951",
            "network_interface_id": "eni-0c2e74900a1ba223f",
            "private_ip": "10.0.5.234",
            "public_ip": "35.159.255.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05cfc2b92fd8ba114",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd752b89f9995e66",
            "association_id": "eipassoc-0344fb0c04d4bee09",
            "connectivity_type": "public",
            "id": "nat-03885b4a84cc49492",
            "network_interface_id": "eni-09102f74e333b57dc",
            "private_ip": "10.0.6.210",
            "public_ip": "63.179.34.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029d6d29ef65a6af8",
            "tags": {
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c5abc70a9d5ea96f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01071c86dd9300222",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5abc70a9d5ea96f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c542905a52cc97741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052b43016bb10c951",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c542905a52cc9774",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00ed9a521350b133d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03885b4a84cc49492",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ed9a521350b133d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003b6dddcb92b5e72",
            "id": "r-rtb-0de66472fd676b4b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de66472fd676b4b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:route-table/rtb-0c5abc70a9d5ea96f",
            "id": "rtb-0c5abc70a9d5ea96f",
            "owner_id": "940482433884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01071c86dd9300222",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:route-table/rtb-0c542905a52cc9774",
            "id": "rtb-0c542905a52cc9774",
            "owner_id": "940482433884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052b43016bb10c951",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:route-table/rtb-00ed9a521350b133d",
            "id": "rtb-00ed9a521350b133d",
            "owner_id": "940482433884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03885b4a84cc49492",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:route-table/rtb-0de66472fd676b4b3",
            "id": "rtb-0de66472fd676b4b3",
            "owner_id": "940482433884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003b6dddcb92b5e72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nebulance-vpc-public",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06436be30886b6e42",
            "route_table_id": "rtb-0c5abc70a9d5ea96f",
            "subnet_id": "subnet-086c9f90e17915dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09308c9f8f20a3223",
            "route_table_id": "rtb-0c542905a52cc9774",
            "subnet_id": "subnet-0c6b367ae543b37fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a6bbefd9471654",
            "route_table_id": "rtb-00ed9a521350b133d",
            "subnet_id": "subnet-001cb81e9f92c8c4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0713d6fe9175a9247",
            "route_table_id": "rtb-0de66472fd676b4b3",
            "subnet_id": "subnet-0bf01d792d2341c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f68fe249a6464554",
            "route_table_id": "rtb-0de66472fd676b4b3",
            "subnet_id": "subnet-05cfc2b92fd8ba114"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686edad6e2e86cde",
            "route_table_id": "rtb-0de66472fd676b4b3",
            "subnet_id": "subnet-029d6d29ef65a6af8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-086c9f90e17915dea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c9f90e17915dea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-0c6b367ae543b37fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b367ae543b37fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-001cb81e9f92c8c4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001cb81e9f92c8c4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-private-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-0bf01d792d2341c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf01d792d2341c2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1a",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-05cfc2b92fd8ba114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cfc2b92fd8ba114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1b",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:subnet/subnet-029d6d29ef65a6af8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029d6d29ef65a6af8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482433884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-nebulance-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc-public-eu-central-1c",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d225e0105d5af27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482433884:vpc/vpc-07d225e0105d5af27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f10d711006684e4",
            "default_route_table_id": "rtb-00b94bed039875757",
            "default_security_group_id": "sg-068b2be254e67afba",
            "dhcp_options_id": "dopt-07f98ac110964baf0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d225e0105d5af27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b94bed039875757",
            "owner_id": "940482433884",
            "tags": {
              "Name": "eks-nebulance-vpc",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            },
            "tags_all": {
              "Cluster": "eks-nebulance",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "eks-nebulance-vpc",
              "Project": "DevOps-Bootcamp-EKS",
              "kubernetes.io/cluster/eks-nebulance": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}